<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/compare_table"
    android:stretchColumns="1" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/amountHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/amountHeader"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/interestHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/interestHeader"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/paymentHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/paymentHeader"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/monthsToPayHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/monthsToPayHeader"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/interestPaidHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/interestPaidHeader"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </TableRow>

</TableLayout>