<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="theDebtCalculator.MainActivity" >
    


    <TextView
        android:id="@+id/debt1_amount_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debt1_amount_label" />

    <EditText
        android:id="@+id/debt1_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/debt1_interest_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debt1_interest_label" />

    <EditText
        android:id="@+id/debt1_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/debt1_monthly_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/debt1_monthly_label" />

    <EditText
        android:id="@+id/debt1_monthly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="calculate"
        android:text="@string/calculate" />

    <TextView
        android:id="@+id/answer"
        android:layout_width="240dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/saveResult"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>